Initial metadata full data set and jupyter notebook used for extracting data.

--- a/metadata_extraction.ipynb
+++ b/metadata_extraction.ipynb
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1497,7 +1497,9 @@
     "        movie['csv data'] = {}\n",
     "        csv_dict = movie['csv data']\n",
     "        \n",
-    "        csv_dict['title'] = \n",
+    "        csv_dict['title'] = api_obj['title'] if 'title' in api_obj.keys() else -1\n",
+    "        csv_dict['imdb id'] = imdbid\n",
+    "        \n",
     "        genre_vector = create_genre_vector(api_obj, genres)\n",
     "        for i in range(len(genres)):\n",
     "            csv_dict[genres[i]] = genre_vector[i]\n",
@@ -1525,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
